--- a/Css/style.css
+++ b/Css/style.css
@@ -4,6 +4,21 @@
     }
 }
 
+@font-face {
+	font-family: "muli";
+	src: url("../Font/Muli/muli/Muli.ttf");
+}
+
+@font-face {
+	font-family: "Muli";
+	src: url("../Font/Muli/muli/Muli.ttf");
+}
+
+@font-face {
+	font-family: "Keep Calm";
+	src: url("../Font/keep calm/KeepCalm-Medium.ttf");
+}
+
 body, html {
     width: 100%;
     height: auto;
@@ -115,9 +130,22 @@ body, html {
     border: 0px;
     background-color: #FAFAFA;
     padding-top: 40px;
-    border-radius: 20px;
+    border-radius: 10px;
+    transition: 0.2s;
+    cursor: pointer;
 }
 
+.surehealthcard:hover {
+    transform: scale(1.05);
+    border-top: 2px solid #388E3C;
+}
+
+.pprice {
+    font-family: lato;
+    font-size:25px;
+    color: #1565C0;
+    font-weight: 600;
+}
 ul {
     list-style: none;
 }
