--- a/Css/faq.css
+++ b/Css/faq.css
@@ -173,34 +173,78 @@ body, html {
     background-color: #00C853
 }
 
-.footer {
-    border-radius: 8px;
+/* Footer */
+
+.psubscribe {
+    color: white;
+    font-family: Muli;
+    font-size:14px;
 }
 
-.pfooter {
-    font-family: hind;
-    color: #EEEEEE;
-    font-size: 14px;
-}
-
-.pcell ,.pemail {
-    font-family: sans-serif;
-    font-size: 14px;
+.btnsubscribe {
+    font-family: muli;
     color: #424242;
-    font-weight: bold;
-    margin-top:12px;
-    margin-left: 5px;
-    cursor: pointer;
-    transition: 0.2s;
+    border-radius: 25px;
+    padding: 15px 20px;
+    font-size: 15px;
+    margin-left: 20px;
+    border: 0px;
+    width: 350px;
+    margin-top:-20px;
 }
 
-.pcell:hover , .pemail:hover {
+.hrfooter {
+    width: 100%;
+    height: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 0 none;
+    margin-top:50px;
+} 
+
+.ptime {
+    font-family: muli;
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.5);
+    font-size:12px;
+    margin-left: 15px;
+  
+}
+
+.ptel {
+    font-family: muli;
+    font-weight: bold;
+    color: white;
+    font-size: 18px;
+    margin-left: 45px;
+    margin-top:-10px !important;
+}
+
+.pmorelinks {
+    font-family: muli;
+    font-weight: bold;
+    color: white;
+    font-size:20px;
+}
+
+.pfooterlinks {
+    font-family: muli;
+    font-size:14px;
+    color: rgba(255, 255, 255, 0.5);
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.pfooterlinks:hover {
     color: #00C853;
 }
 
-.plastfooter {
-    font-family: hind;
-    font-weight: bold;
-    font-size:12px;
-    color:#424242;
+.pcopyright {
+    font-family: muli semibold;
+    color: white;
+    font-size: 13px;
+    margin-top:10px;
+    margin:auto;
+    padding-bottom: 10px;
 }
