--- a/Css/login.css
+++ b/Css/login.css
@@ -37,8 +37,20 @@ body, html {
   .txtpassword, .txtusername , .btnlogin {
     width: 100% !important;
   }
+  .txtpassword {
+    width: 100% !important;
+  }
+  .txtusername {
+    width: 100% !important;
+  }
   .psignin {
     margin-top: 20px !important;
+  }
+}
+
+@media only screen and (max-width: 762px) {
+  .lblforgot {
+    float: none !important;
   }
 }
 
@@ -86,7 +98,7 @@ body, html {
 
 input[type="text"] {
     box-sizing: border-box;
-    width: 58%;
+    width: 400px;
     height: calc(3em + 2px);
     margin: 0 0 1em;
     padding: 1em;
@@ -133,7 +145,7 @@ input[type="text"] {
  
   input[type="password"] {
     box-sizing: border-box;
-    width: 58%;
+    width: 400px;
     height: calc(3em + 2px);
     margin: 0 0 1em;
     padding: 1em;
@@ -179,18 +191,14 @@ input[type="text"] {
   }
 
   .txtusername {
-    background-image: url(../Image/username.png);
+    background: url(../Image/username.png) no-repeat 97.25% 15px white;
     display: inline-block;
-    background-repeat: no-repeat;
-    background-position: 370px 15px;;
     vertical-align: middle;
 }
 
 .txtpassword {
-    background-image: url(../Image/password.png);
+    background: url(../Image/password.png)  no-repeat 97.25% 15px white;
     display: inline-block;
-    background-repeat: no-repeat;
-    background-position: 370px 15px;;
     vertical-align: middle;
 }
 
