--- a/Css/list.css
+++ b/Css/list.css
@@ -26,6 +26,9 @@
     .btnadd {
         width: 100% !important;
     }
+    .rowtable {
+        margin-top: 10px;
+    }
 }
 
 @media only screen and (max-width: 760px) {
@@ -91,6 +94,13 @@ sup {
     outline: none !important;
 }
 
+table {
+    border-collapse: seperate;
+    width: 100%;
+    margin-bottom: 5rem !important;
+}
+
+
 th {
     font-family: Muli;
     color: #424242;
@@ -129,4 +139,73 @@ tr:hover {
     font-size: 1rem;
 }
 
+
+/* 
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	table { 
+          width: 100%; 
+	}
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+        padding-left: 30%; 
+        margin-bottom: 10px;
+	}
+
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+		/* Label the data */
+		content: attr(data-column);
+
+		color: #000;
+		font-weight: bold;
+	}
+
+}
+
+.footer {
+    background-color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid lightgray;
+}
+
+.pcopy {
+    font-family: Muli Semibold;
+    color: #424242;
+    font-size: 0.9rem;
+    letter-spacing: -0.5px;
+}
 
