--- a/Css/contact.css
+++ b/Css/contact.css
@@ -23,7 +23,7 @@
     #mapid {
         margin-top: 20px !important;
     }
-    .btnlogin {
+    .btncontact{
         border: 0px !important;
         padding: 0px !important;
         color: #424242 !important;
@@ -31,7 +31,7 @@
         font-family: muli semibold !important;
         margin-top: 5px;
     }
-    .btnlogin:hover {
+    .btncontact:hover {
         background-color: transparent !important;
         color: #424242 !important;
     }
@@ -52,6 +52,12 @@
     }
 }
 
+@media only screen and (max-width: 572px) {
+    .col-location {
+        margin-top: 20px;
+    }
+}
+
 @media only screen and (max-width: 550px) {
     .psubscribe {
         text-align: center !important;
@@ -60,13 +66,18 @@
         width: auto !important;
         margin-top: 10px !important;
     }
-}
-
-@media only screen and (max-width: 572px) {
-    .col-location {
-        margin-top: 20px;
+    .pquestion {
+        font-size: 30px !important;
+    }
+    .coltext {
+        margin-top: 40px !important;
+        padding-left: 15px !important;
+    }
+    .txtfullname, .txtemailadd, .txtcontact, .txtmessage {
+        width: 100% !important;
     }
 }
+
 
 body, html {
     width: 100%;
@@ -159,7 +170,7 @@ body, html {
     border: 0px;
     background-color: transparent;
     letter-spacing: -0.5px;
-    border-bottom: 1px solid #212121;
+    border-bottom: 1px solid #9E9E9E;
     width: 80%;
     outline: none;
     padding: 5px;
@@ -173,7 +184,7 @@ body, html {
 .txtmessage {
     font-family: muli semibold;
     color: #212121;
-    border: 1px solid #212121;
+    border: 1px solid #9E9E9E;
     width: 80%;
     height: 100px;
     outline: none;
