--- a/Css/contact.css
+++ b/Css/contact.css
@@ -23,7 +23,7 @@
     #mapid {
         margin-top: 20px !important;
     }
-    .btncontact{
+    .btnlogin {
         border: 0px !important;
         padding: 0px !important;
         color: #424242 !important;
@@ -31,7 +31,7 @@
         font-family: muli semibold !important;
         margin-top: 5px;
     }
-    .btncontact:hover {
+    .btnlogin:hover {
         background-color: transparent !important;
         color: #424242 !important;
     }
@@ -76,6 +76,9 @@
     .txtfullname, .txtemailadd, .txtcontact, .txtmessage {
         width: 100% !important;
     }
+    .hr1 {
+        width: 100% !important;
+    }
 }
 
 
@@ -99,9 +102,7 @@ body, html {
     color: #00C853 !important;
 }
 
-.btncontact {
-    color: #00C853 !important;
-    padding: 10px 30px 10px 30px !important;
+.btnlogin {
     border: 2px solid #00C853;
     background-color: transparent;
     border-radius: 25px;
