--- a/Css/beta.css
+++ b/Css/beta.css
@@ -16,6 +16,7 @@
 @media only screen and (min-width: 1200px) {
     .con {
         max-width: 1366px !important;
+        padding: 40px;
     }
 }
 
