--- a/Css/beta.css
+++ b/Css/beta.css
@@ -20,6 +20,59 @@
     }
 }
 
+@media only screen and (max-width: 1188px) {
+    .con {
+        padding: 15px !important;
+        max-width: 1100px !important;
+    }
+    .pTitle {
+        width: 100% !important;
+        font-size: 2rem !important;
+    }
+    .divBenefits {
+        width: 100% !important;
+    }
+}
+
+@media only screen and (max-width: 964px) {
+    .colSteps {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 606px) {
+    .colForm {
+        padding: 10px !important;
+    }
+    .divCreate {
+        width: 100% !important;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .pBenefits {
+        font-weight: 500;
+    }
+    .conMain {
+        height: auto !important;
+    }
+    .imgCheck {
+        width: 15px !important;
+    }
+    .pMember {
+        display: block !important;
+    }
+    .divBenefits {
+        padding-left: 10px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .colForm {
+        margin-top: 50px !important;
+    }
+}
+
 body, html {
     width: 100%;
     height: 100%;
@@ -364,7 +417,6 @@ input[type="password"][required]+label[placeholder]:before {
     animation-duration: 0.3s !important;
 }
 
-
 .image-upload>input {
     display: none;
 }
@@ -502,4 +554,130 @@ select::-ms-expand {
     color: #212121;
     font-size: 0.9rem;
     font-weight: 500;
+}
+
+.bgWhite {
+    background-color: white;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+}
+
+.divCarousel {
+    height: 180px;
+}
+
+.divActive {
+    background: #4CAF50;
+    -webkit-box-shadow: 0px 2px 17px 0px rgba(76, 175, 80, 0.18);
+    -moz-box-shadow: 0px 2px 17px 0px rgba(76, 175, 80, 0.18);
+    box-shadow: 0px 2px 17px 0px rgba(76, 175, 80, 0.18);
+}
+
+.divNotActive {
+    background-color: white;
+    box-shadow: none;
+}
+
+.divVariant {
+    height: 150px;
+    margin-right: 10px;
+    border-radius: 10px;
+    position: relative;
+    margin-top: 0px !important;
+    border: 1px solid lightgrey;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.divVariant1 {
+    background-color: white;
+    height: 150px;
+    margin-right: 10px;
+    border-radius: 10px;
+    border: 1px solid lightgray;
+    position: relative;
+    z-index: -999;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.imgTick {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.imgActive {
+    position: absolute;
+    filter: brightness(0) invert(1);
+    top: 35px;
+}
+
+.imgPic {
+    position: absolute;
+    top: 35px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
+}
+
+.imgNotActive {
+    position: absolute;
+    top: 35px;
+}
+
+.pVariantBox {
+    font-family: Roboto;
+    color: #00C853;
+    font-weight: 400;
+    font-size: 1.3rem;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 15px;
+}
+
+.pVariantActive {
+    color: white !important;
+}
+
+.btnSelect {
+    font-family: Roboto;
+    color: #00C853;
+    background-color: white;
+    border: 0px;
+    border-radius: 25px;
+    position: absolute;
+    bottom: -15px;
+    padding: 7px;
+    width: 125px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%) z-index: 222222222222222;
+    -webkit-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+    -moz-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+}
+
+.pBenefits {
+    font-family: Roboto;
+    color: #212121;
+    font-size: 0.9rem;
+}
+
+.divBenefits {
+    animation-duration: 0.2s !important;
+}
+
+.pMember {
+    font-family: Catamaran;
+    color: #212121;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-left: 5px;
+    display: none;
+    margin-top: -10px;
 }
