--- a/Css/beta.css
+++ b/Css/beta.css
@@ -682,3 +682,15 @@ select::-ms-expand {
     display: none;
     margin-top: -10px;
 }
+
+.conFooter {
+    background-color: white;
+    -webkit-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+    -moz-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
+    border: 1px solid lightgray;
+    padding: 10px;
+    padding-top: 0px;
+    position: fixed;
+    bottom: 0px;
+}
