--- a/Css/beta.css
+++ b/Css/beta.css
@@ -44,8 +44,18 @@
     .colForm {
         padding: 10px !important;
     }
-    .divCreate {
+    .divCreate, .divMembership {
         width: 100% !important;
+    }
+    .divMembership {
+        padding: 0px;
+    }
+    .txtfirstname, .txtmiddle, .txtlast, .bday {
+        width: 105% !important;
+    }
+    .selectdiv select {
+        width: 105% !important;
+        float: none !important;
     }
 }
 
@@ -474,7 +484,7 @@ select::-ms-expand {
     /* Add some styling */
     display: block;
     border-radius: 25px;
-    width: 220px;
+    width: 100%;
     height: 50px;
     float: right;
     margin: 5px 0px;
@@ -663,6 +673,7 @@ select::-ms-expand {
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
     z-index: 222222222222222;
+    outline: none !important;
     -webkit-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
     -moz-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
     box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
@@ -699,4 +710,30 @@ select::-ms-expand {
     padding-bottom: 5px;
     position: fixed;
     bottom: 0px;
+}
+
+.btnBackFooter {
+    color: white;
+    background-color: #00C853;
+    padding: 10px 20px;
+    border-radius: 25px;
+    border: 0px;
+    margin-top: 15px;
+    width: 100%;
+    cursor: pointer;
+    box-shadow: 0 2px 16px -6px #00C853 !important;
+    outline: none;
+}
+
+.btnNextFooter {
+    color: white;
+    background-color: #00C853;
+    padding: 10px 20px;
+    border-radius: 25px;
+    border: 0px;
+    margin-top: 15px;
+    width: 100%;
+    cursor: pointer;
+    box-shadow: 0 2px 16px -6px #00C853 !important;
+    outline: none;
 }
