--- a/Css/beta.css
+++ b/Css/beta.css
@@ -20,6 +20,40 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .pBenefits {
+        font-weight: 500;
+    }
+    .conMain {
+        height: auto !important;
+        padding-bottom: 70px !important;
+    }
+    .imgCheck {
+        width: 15px !important;
+    }
+    .pMember {
+        display: block !important;
+    }
+    .divBenefits {
+        padding-left: 10px;
+    }
+    .colMiddle {
+        display: none !important;
+    }
+    .pCreate {
+        font-size: 1.5rem !important;
+    }
+    .divCreate {
+        margin-top: 20px !important;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .conFooter {
+        max-width: 900px !important;
+    }
+}
+
 @media only screen and (max-width: 1188px) {
     .con {
         padding: 15px !important;
@@ -57,33 +91,12 @@
         width: 105% !important;
         float: none !important;
     }
-}
-
-@media only screen and (max-width: 500px) {
-    .pBenefits {
-        font-weight: 500;
-    }
-    .conMain {
-        height: auto !important;
-        padding-bottom: 70px !important;
-    }
-    .imgCheck {
-        width: 15px !important;
-    }
-    .pMember {
+    .divStep {
         display: block !important;
     }
-    .divBenefits {
-        padding-left: 10px;
-    }
-    .conFooter {
-        border-top-left-radius: 25px;
-        border-top-right-radius: 25px;
-    }
-    .colMiddle {
-        display: none !important;
-    }
 }
+
+
 
 @media only screen and (max-width: 600px) {
     .colForm {
@@ -98,7 +111,7 @@ body, html {
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #FAFAFA;
 }
 
 .conNav {
@@ -283,7 +296,8 @@ input[type="text"] {
     margin: 0 0 1em;
     padding: 1em;
     border: 1px solid #ccc;
-    border-radius: 1.5em;
+    background-color: white;
+    border-radius: 5px;
     resize: none;
     outline: none;
 }
@@ -318,7 +332,7 @@ input[type="text"][required]+label[placeholder]:before {
     font-family: Roboto;
     content: attr(placeholder);
     display: inline-block;
-    margin: 0 calc(1em + 2px);
+    margin: 0 calc(2em + 2px);
     padding: 0 2px;
     color: #898989;
     white-space: nowrap;
@@ -343,7 +357,7 @@ input[type="password"] {
     margin: 0 0 1em;
     padding: 1em;
     border: 1px solid #ccc;
-    border-radius: 1.5em;
+    border-radius: 5px;
     resize: none;
     outline: none;
 }
@@ -492,7 +506,7 @@ select::-ms-expand {
     appearance: none;
     /* Add some styling */
     display: block;
-    border-radius: 25px;
+    border-radius: 5px;
     width: 100%;
     height: 50px;
     float: right;
@@ -500,7 +514,7 @@ select::-ms-expand {
     padding: 0px 24px;
     font-size: 16px;
     line-height: 1.75;
-    color: #898989;
+    color: #212121;
     background-color: #ffffff;
     background-image: none;
     border: 1px solid #cccccc;
@@ -511,9 +525,9 @@ select::-ms-expand {
 .bday {
     font-family: Roboto;
     border: 1px solid lightgrey;
-    border-radius: 25px;
+    border-radius: 5px;
     outline: none;
-    color: #898989;
+    color: #212121;
     width: 100%;
     margin-top: 10px;
     padding: 10px 25px;
@@ -708,7 +722,7 @@ select::-ms-expand {
     margin-top: -10px;
 }
 
-.conFooter {
+.conMainFooter {
     background-color: white;
     -webkit-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
     -moz-box-shadow: 0px 2px 17px 0px rgba(0, 0, 0, 0.18);
@@ -725,7 +739,7 @@ select::-ms-expand {
     color: white;
     background-color: #00C853;
     padding: 10px 20px;
-    border-radius: 25px;
+    border-radius: 5px;
     border: 0px;
     margin-top: 15px;
     width: 100%;
@@ -738,7 +752,7 @@ select::-ms-expand {
     color: white;
     background-color: #00C853;
     padding: 10px 20px;
-    border-radius: 25px;
+    border-radius: 5px;
     border: 0px;
     margin-top: 15px;
     width: 100%;
@@ -764,7 +778,6 @@ select::-ms-expand {
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    
 }
 
 .txtTop {
@@ -781,4 +794,53 @@ select::-ms-expand {
     margin-top: -15px;
     margin-bottom: 0px;
     padding-right: 5px;
+}
+
+.p1 {
+    font-family: Roboto;
+    color: white;
+    background-color: #00C853;
+    border-radius: 50%;
+    width: max-content;
+    padding: 5px;
+    width: 35px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.p2 {
+    font-family: Roboto;
+    color: white;
+    background-color: #9E9E9E;
+    border-radius: 50%;
+    width: max-content;
+    padding: 5px;
+    width: 35px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.p3 {
+    font-family: Roboto;
+    color: white;
+    background-color: #9E9E9E;
+    border-radius: 50%;
+    width: max-content;
+    padding: 5px;
+    width: 35px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.divLine1, .divLine2 {
+    height: 1px;
+    width: 110%;
+    background-color: lightgrey;
+    position: absolute;
+    top: 16px;
+    z-index: -1;
+    left: 50%;
 }
